syntax = "proto3";
package model_analysis;




import "google/protobuf/struct.proto";

/*
GetModelAnalysis返回
*/
message GetModelAnalysisResponse {
message List {
    /*
    模型 id
    */
    string objectId = 1 ;
    /*
    模型名称
    */
    string objectName = 2 ;
    /*
    属性列表
    */
    repeated string attrs = 3 ;
    /*
    实例总数
    */
    int32 instanceTotal = 4 ;
    /*
    字段为空统计
    */
    google.protobuf.Struct failCount = 5 ;
}
        
    
    /*
    分析数据列表
    */
    repeated List list = 1 ;
}

/*
GetModelAnalysisApi返回
*/
message GetModelAnalysisResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    model_analysis.GetModelAnalysisResponse data = 4 ;
}

